--- a/css/wwfstyle.css
+++ b/css/wwfstyle.css
@@ -29,25 +29,21 @@ h6 {
 }
 
 
-
-/*header {
-    width: 100%;
-    background-color: #333;
-    padding-bottom: 10px;
-}
-
-header img {
-    background-color: #fff;
-    display: block;
-    margin: 0 auto;
-    
-        
-} */
-
 body {
     background-image: url("../img/animal_kingdom.jpg");
     background-attachment: fixed;
+    color: #0E79B2;
 }
+
+/*General Floats*/
+.floatleft {
+    float: left;
+}
+
+.floatright {
+    float: right;
+}
+
 /* Nav logo*/
 .navbar-brand img {
     max-width: 45px; 
@@ -59,6 +55,24 @@ body {
     text-align: center;
 }
 
+/* Main Text Areas*/
+.main {
+    background-color: #eee;
+    margin-bottom: 0px;
+    border-radius: 6px 6px 0 0;
+    padding: 5px;
+/*
+    margin-right: -15px;
+    margin-left: -15px;
+*/
+}
+
+/*Main Text P element*/
+.main p:last-child {
+    margin-bottom: 0px;
+}
+
+/*Logo*/
 .logo img {
     background-color: #fff;
     display: block;
@@ -69,7 +83,10 @@ body {
 }
 
 .jumbotron {
-   background-color: #0E79B2;
+    background-color: #eee;
+    border-top: 30px double #0E79B2;
+    border-bottom: 30px double #0E79B2;
+    
 }
 
 .maingrp {
@@ -77,9 +94,13 @@ body {
     height: auto;
 }
 
+/*Items that will appear side to side each other*/
 .sidegrp  {
     padding-top: 40px;
 }
+
+
+
 .thumbnail {
     margin-top: 20px;
     border-radius: 20px !important;
@@ -103,7 +124,7 @@ body {
 
 /*Payment Infomtion section in Donate Page*/
 .ccinfo, .donateamt {
-    background-color: #fff;
+    background-color: #eee;
 }
 
 
@@ -117,13 +138,38 @@ img.globe {
 footer {
     margin-top: 20px;
     background-color: #eee;
-    width: 1150px;
-    height: auto;
+    width: 100%;
+    height: 100px;
     margin-left: auto;
     margin-right: auto;
     border-radius: 6px;
     padding: 20px;
 }
+
+
+/*Footer Nav*/
+.footer-nav ul {
+    list-style: none;
+/*
+    float: right;
+    text-align: center;
+*/
+}
+
+.footer-nav ul li {
+    display: inline-block;
+}
+
+.footer-nav ul li a {
+    margin: 0 10px;
+}
+
+.footer-nav img {
+    background-color: #0E79B2;
+    border-radius: 50%;
+}
+
+/* End of Footer Nav*/
 
 /* CSS for Credit Card Payment form */
 .credit-card-box .panel-title {
